export class ServiceCharge {
    constructor(public readonly date: Date, public  readonly charge: number) {}
}