export interface Transaction {
    execute(): void;
}